--- a/2.2-databases-2/orm_migrations/templates/school/students_list.html
+++ b/2.2-databases-2/orm_migrations/templates/school/students_list.html
@@ -5,8 +5,12 @@
 {% block content %}
 <div class="row">
   <ul>
-  {% for student in object_list %}
-    <li>{{ student.name }} {{ student.group }} <br> Преподаватель: {{ student.teacher.name }} {{ student.teacher.subject }}</li>
+  {% for student in students %}
+    <li>{{ student.name }} {{ student.group }} <br> Преподаватели: <br>
+      {% for teacher in student.teachers.all %}
+        {{ teacher.name }}, предмет {{ teacher.subject }} <br>
+      {% endfor %}
+    </li>
   {% endfor %}
   </ul>
 </div>
